# hisp

./: CODEOWNERS  ReadMe.md  hisp.cabal  shell.nix
Tests/: Tests.hs
app/: Main.hs
src/: Hisp.hs
src/Hisp/: Atom.hs  Prelude.hs  Utils.hs
