cabal-version:  2.2
name:           hisp
version:        0.0.1
synopsis:       Haskellized Lisp
description:    Game of the design merge between Haskell and Lisp.
category:       Programming language, Lisp
homepage:       https://github.com/Anton-Latukha/hisp#readme
bug-reports:    https://github.com/Anton-Latukha/hisp/issues
author:         Anton-Latukha
maintainer:     anton.latukha+hisp@gmail.com
license:        LGPL-2.1-or-later
license-file:   License
build-type:     Simple
data-dir:       data/
extra-source-files:
  ChangeLog.md
  ReadMe.md
  License

source-repository head
  type: git
  location: https://github.com/Anton-Latukha/hisp

flag optimize
  description: Enable all optimization flags
  manual: True
  default: True

flag profiling
  description: Enable profiling
  manual: True
  default: False

common shared
  default-language: GHC2021
  default-extensions:
      NoImplicitPrelude
    , LambdaCase
    , ViewPatterns
    , OverloadedStrings
    , OverloadedLists
  build-depends:
      base >= 4.12 && < 4.21
    , data-fix
    , exceptions
    , filepath
    , relude
    , serialise
    , template-haskell
    , time
    , tasty
    , tasty-hunit
    , geniplate-mirror
    , validity
    , genvalidity
    , QuickCheck
    , Cabal-syntax
    , genvalidity-hspec
    , yaya
  ghc-options:
    -Wall
    -Wno-incomplete-uni-patterns
    -fprint-potential-instances
    -- -ddump-deriv
  if flag(optimize)
    default-extensions:
      ApplicativeDo
    ghc-options:
      -O2
      -fexpose-all-unfoldings
      -fspecialise-aggressively
  -- if !flag(profiling)
  --   build-depends:
  --       ghc-datasize

library
  import: shared
  exposed-modules:
    Hisp
    Hisp.Prelude
    Hisp.Utils
    Hisp.Atom
  other-modules:
    Paths_hisp
  autogen-modules:
    Paths_hisp
  hs-source-dirs:
    src
  build-depends:
    , aeson
    , array
    , base16-bytestring
    , binary
    , bytestring
    , cryptonite
    , comonad
    , containers
    , deepseq
    , deriving-compat
    , directory
    , extra
    , free
    , gitrev
    , hashable
    , hashing
    , http-client
    , http-client-tls
    , http-types
    , lens-family
    , lens-family-core
    , lens-family-th
    , logict
    , attoparsec
    , monad-control
    , monadlist
    , mtl
    , neat-interpolation
    , parser-combinators
    , pretty-show
    , prettyprinter
    , process
    , ref-tf
    , regex-tdfa
    , scientific
    , semialign
    , some
    , split
    , syb
    , th-lift-instances
    , text
    -- , these >= 1.0.1 && < 1.2
    , transformers
    , transformers-base
    , unix-compat
    , unordered-containers

executable hisp
  import: shared
  hs-source-dirs:
    app
  main-is: Main.hs
--   other-modules:
--     Repl
--     Paths_hnix
--   autogen-modules:
--     Paths_hnix
  build-depends:
       hisp
--     , pretty-show
--     , prettyprinter
--   if impl(ghc < 8.10)
--     -- GHC < 8.10 comes with haskeline < 0.8, which we don't support.
--     -- To simplify CI, we just disable the component.
--     buildable: False

test-suite hnix-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Tests.hs
--   other-modules:
--     EvalTests
--     NixLanguageTests
--     ParserTests
--     PrettyParseTests
--     PrettyTests
--     ReduceExprTests
--     TestCommon
  hs-source-dirs:
    Tests
  build-depends:
      hisp
    , tasty
    , tasty-hunit
    , tasty-hedgehog
    , tasty-quickcheck
--       hnix
--     , Diff
--     , Glob
--     , containers
--     , directory
--     , hedgehog
--     , megaparsec
--     , neat-interpolation
--     , pretty-show
--     , prettyprinter
--     , process
--     , split
--     , tasty-th
--     , unix-compat

-- benchmark hnix-benchmarks
--   import: shared
--   type: exitcode-stdio-1.0
--   main-is: Main.hs
--   other-modules:
--     ParserBench
--   hs-source-dirs:
--     benchmarks
--   build-depends:
--     hnix
--     , criterion
